fix(about): Remove unnecessary scrollbar.
The horizontal scrollbar isn't necessary since the navigation
bar will animate the "about" section to the right content.

--- a/res/styles/index.css
+++ b/res/styles/index.css
@@ -59,8 +59,8 @@ body {
     width: 80%;
     height:100vh;
     background-color: rgba(12, 12, 12, 0.8);
-    overflow:visible;
-    overflow-x:scroll;
+    overflow-x: hidden;
+    overflow-y: auto;
 }
 #tooltip_menu {
     position:absolute;
@@ -82,7 +82,7 @@ body {
     height:28%;
 }
 #top_menu:hover .top_menu_button {
-    
+
 }
 .top_menu_button {
     top:0px;
